@@ -2,7 +2,7 @@ select now() as 'Generated on';
 
 select count(*) as '<br><b>Registered users</b>' from users where uid != 1;
 select count(*) as '<b>Total flights</b>' from flights where uid != 1;
-select count(*) as '<b>Flights added/edited yesterday</b>' from flights where uid != 1 and date_sub(now(), interval 1 day) < upd_time;
+select count(*) as '<b>Flights added yesterday</b>' from flights where uid != 1 and date_sub(now(), interval 1 day) < upd_time;
 
 select lpad(count(*),8," ") as '<table width=100%><tr><td style="vertical-align: top;"><pre><b>Top 10 users by flights<br>All time</b>', IF(u.public='N',u.name,concat('<a href="http://openflights.org/user/',u.name,'">',u.name,'</a>')) as '' from users as u,flights as f where u.uid != 1 and u.uid=f.uid group by f.uid order by count(*) desc limit 10;
 
